@@ -3,6 +3,7 @@
           past fortnight, and past 30 days.
         Preferences now has an option for when your prefs expire.
         Navbar added to diff and history pages.
+        The "omit help links" preference now actually works.
 
 0.39    15 September 2004
         Split commit_node out into OpenGuides.pm in preparation for spam filter
